k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-flask-app
spec:
  type: NodePort
  selector:
    app: my-flask-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 30000
